--- a/eml2023.html
+++ b/eml2023.html
@@ -53,8 +53,6 @@
         </div>
     </div>
 
-    <footer>
-        <p>&copy; 2026 Skyler Fellenz</p>
-    </footer>
+    <footer><p>&copy; 2026 Skyler Fellenz</p></footer>
 </body>
 </html>
