--- a/coding.html
+++ b/coding.html
@@ -28,20 +28,19 @@
     </header>
 
     <div class="container">
-        <h1>Coding & Software</h1>
-        <p>Software solutions and scripts developed for engineering analysis and automation.</p>
+        <h1>Engineering Analysis & Coding</h1>
+        <p>Numerical tools and scripts developed primarily in MATLAB for mechanical systems analysis.</p>
         
         <div class="file-grid">
             <div class="file-card">
                 <h3>MATLAB Data Analysis</h3>
-                <p>Numerical simulation and visualization script for mechanical systems.</p>
-                <a href="https://github.com/skylerfellenz" class="btn-download" target="_blank">View on GitHub</a>
+                <p>Numerical simulation and visualization script for mechanical vibrations and system dynamics.</p>
+                <a href="#" class="btn-download">View on GitHub</a>
             </div>
-
             <div class="file-card">
-                <h3>Python Automation Script</h3>
-                <p>Custom script designed to streamline CAD file management and organization.</p>
-                <a href="https://github.com/skylerfellenz" class="btn-download" target="_blank">View Repository</a>
+                <h3>Finite Element Script</h3>
+                <p>Custom MATLAB script for calculating nodal displacements in 2D truss structures.</p>
+                <a href="#" class="btn-download">View Repository</a>
             </div>
         </div>
     </div>
