--- a/iam3d.html
+++ b/iam3d.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>IAM3D | Skyler Fellenz</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700;800&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -35,14 +34,13 @@
         <div class="file-grid">
             <div class="file-card">
                 <h3>Optimized Lattice Structure</h3>
-                <p>Lightweight infill design optimized for high-strength SLS or FDM printing.</p>
-                <a href="cad_files/iam3d/lattice_part.stl" class="btn-download" download>Download STL</a>
+                <p>Lightweight infill design optimized for high-strength additive manufacturing.</p>
+                <a href="#" class="btn-download">Download STL</a>
             </div>
-
             <div class="file-card">
-                <h3>Print Orientation Strength Study</h3>
-                <p>Formal analysis of mechanical property variance based on print layer orientation.</p>
-                <a href="cad_files/iam3d/orientation_study.pdf" class="btn-download" target="_blank">View Analysis</a>
+                <h3>Structural Analysis</h3>
+                <p>Mechanical property variance based on print layer orientation and material density.</p>
+                <a href="#" class="btn-download">View Analysis</a>
             </div>
         </div>
     </div>
