--- a/grip.html
+++ b/grip.html
@@ -35,13 +35,12 @@
             <div class="file-card">
                 <h3>Adaptive Hand Assembly</h3>
                 <p>Fully constrained 3D model of an assistive prosthetic hand mechanism.</p>
-                <a href="cad_files/grip/hand_assembly.step" class="btn-download" download>Download STEP</a>
+                <a href="#" class="btn-download">Download STEP</a>
             </div>
-
             <div class="file-card">
-                <h3>Technical Design Documentation</h3>
-                <p>Comprehensive report covering design iterations and user testing feedback.</p>
-                <a href="cad_files/grip/design_report.pdf" class="btn-download" target="_blank">View PDF Report</a>
+                <h3>Testing Documentation</h3>
+                <p>Analysis of mechanical performance and user ergonomic feedback.</p>
+                <a href="#" class="btn-download">View Report</a>
             </div>
         </div>
     </div>
