--- a/eml2023.html
+++ b/eml2023.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EML2023 | Skyler Fellenz</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700;800&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -36,23 +35,15 @@
             <div class="file-card">
                 <h3>Main Mechanical Assembly</h3>
                 <p>Full system assembly featuring complex motion constraints and interference analysis.</p>
-                <a href="cad_files/eml2023/assembly.step" class="btn-download" download>Download STEP File</a>
+                <a href="#" class="btn-download">Download STEP</a>
             </div>
-
             <div class="file-card">
                 <h3>Technical Engineering Drawings</h3>
-                <p>Dimensioned PDF drawings including GD&T, Bill of Materials (BOM), and manufacturing tolerances.</p>
-                <a href="cad_files/eml2023/technical_drawing.pdf" class="btn-download" target="_blank">View PDF Drawing</a>
-            </div>
-
-            <div class="file-card">
-                <h3>CNC Machined Mounting Bracket</h3>
-                <p>Individual component designed specifically for 3-axis CNC milling operations.</p>
-                <a href="cad_files/eml2023/bracket.sldprt" class="btn-download" download>Download SLDPRT</a>
+                <p>Dimensioned PDF drawings including GD&T and manufacturing tolerances.</p>
+                <a href="#" class="btn-download">View PDF</a>
             </div>
         </div>
     </div>
-
     <footer><p>&copy; 2026 Skyler Fellenz</p></footer>
 </body>
 </html>
