--- a/coding.html
+++ b/coding.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coding | Skyler Fellenz</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700;800&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -29,21 +30,31 @@
 
     <div class="container">
         <h1>Engineering Analysis & Coding</h1>
-        <p>Numerical tools and scripts developed primarily in MATLAB for mechanical systems analysis.</p>
+        <p>Mathematical modeling and simulation tools developed in MATLAB to solve complex mechanical engineering problems.</p>
         
         <div class="file-grid">
             <div class="file-card">
-                <h3>MATLAB Data Analysis</h3>
-                <p>Numerical simulation and visualization script for mechanical vibrations and system dynamics.</p>
-                <a href="#" class="btn-download">View on GitHub</a>
-            </div>
-            <div class="file-card">
-                <h3>Finite Element Script</h3>
-                <p>Custom MATLAB script for calculating nodal displacements in 2D truss structures.</p>
+                <h3>MATLAB Dynamics Simulation</h3>
+                <p>Numerical simulation of multi-degree-of-freedom systems, including vibration analysis and frequency response mapping.</p>
                 <a href="#" class="btn-download">View Repository</a>
+            </div>
+
+            <div class="file-card">
+                <h3>Finite Element Analysis Script</h3>
+                <p>A custom-built MATLAB tool for calculating nodal displacements and element stresses in 2D truss and frame structures.</p>
+                <a href="#" class="btn-download">Download Script</a>
+            </div>
+
+            <div class="file-card">
+                <h3>Numerical Methods Toolkit</h3>
+                <p>Collection of scripts for root-finding, numerical integration, and solving ordinary differential equations (ODEs).</p>
+                <a href="#" class="btn-download">View Folder</a>
             </div>
         </div>
     </div>
-    <footer><p>&copy; 2026 Skyler Fellenz</p></footer>
+
+    <footer>
+        <p>&copy; 2026 Skyler Fellenz</p>
+    </footer>
 </body>
 </html>
