--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
         <div class="brand-name"><a href="index.html">SKYLER FELLENZ</a></div>
         <nav>
             <ul class="nav-links">
+                <li><a href="index.html#about">About</a></li>
+                <li><a href="index.html#resume">Resume</a></li>
+                <li><a href="index.html#contact">Contact</a></li>
                 <li class="dropdown">
                     <a href="#">Projects ▼</a>
                     <ul class="dropdown-menu">
@@ -21,9 +24,6 @@
                         <li><a href="iam3d.html">IAM3D</a></li>
                     </ul>
                 </li>
-                <li><a href="index.html#about">About</a></li>
-                <li><a href="index.html#resume">Resume</a></li>
-                <li><a href="index.html#contact">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -32,28 +32,28 @@
         <div class="hero-container">
             <h1>SKYLER FELLENZ</h1>
             <h2>DESIGN HUB</h2>
-            <p>Mechanical Engineering • CAD • Software Development</p>
+            <p>Mechanical Engineering • CAD • Engineering Analysis</p>
         </div>
     </section>
 
     <section id="about" class="content-section">
         <h2>About Me</h2>
         <div class="about-text">
-            <p>Hi, I’m Skyler — a mechanical engineering student with a strong interest in design, problem-solving, and building things that actually work in the real world. I’m currently studying Mechanical Engineering at the University of Florida, where I focus on translating theory into practical, well-engineered solutions.</p>
-            <p>I enjoy tackling open-ended problems that sit at the intersection of mechanics, design, and human impact. Through coursework, team projects, and hands-on experience, I’ve worked with CAD modeling, mechanical analysis, and technical communication, always with an emphasis on clarity, efficiency, and thoughtful design decisions.</p>
+            <p>Hi, I’m Skyler — a mechanical engineering student focused on design and problem-solving. I study Mechanical Engineering at the University of Florida, translating theory into practical solutions.</p>
+            <p>I enjoy tackling problems at the intersection of mechanics, design, and human impact, with an emphasis on clarity and efficiency.</p>
         </div>
     </section>
 
     <section id="resume" class="content-section">
         <h2>Resume</h2>
-        <p>Technical Skills: SolidWorks, MATLAB, and Mechanical Design.</p>
+        <p>Technical Skills: SolidWorks, MATLAB, Mechanical Design, Additive Manufacturing.</p>
         <a href="resume.pdf" class="btn-download" download>Download Full Resume</a>
     </section>
 
     <section id="contact" class="content-section">
         <h2>Contact</h2>
-        <p>Looking to discuss a project or potential opportunity? Reach out via email:</p>
-        <a href="mailto:skyfellenzjobs@gmail.com" class="email-link">skyfellenzjobs@gmail.com</a>
+        <p>Reach out via email to discuss opportunities or projects:</p>
+        <a href="mailto:skyfellenzjobs@gmail.com" style="color:var(--sky-blue); font-weight:700; text-decoration:none; font-size:1.2rem;">skyfellenzjobs@gmail.com</a>
     </section>
 
     <footer><p>&copy; 2026 Skyler Fellenz</p></footer>
