--- a/coding.html
+++ b/coding.html
@@ -5,13 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coding | Skyler Fellenz</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700;800&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
         <div class="brand-name"><a href="index.html">SKYLER FELLENZ</a></div>
         <nav>
             <ul class="nav-links">
+                <li><a href="index.html#about">About</a></li>
+                <li><a href="index.html#resume">Resume</a></li>
+                <li><a href="index.html#contact">Contact</a></li>
                 <li class="dropdown">
                     <a href="#">Projects ▼</a>
                     <ul class="dropdown-menu">
@@ -21,16 +23,13 @@
                         <li><a href="iam3d.html">IAM3D</a></li>
                     </ul>
                 </li>
-                <li><a href="index.html#about">About</a></li>
-                <li><a href="index.html#resume">Resume</a></li>
-                <li><a href="index.html#contact">Contact</a></li>
             </ul>
         </nav>
     </header>
 
     <div class="container">
         <h1>Engineering Analysis & Coding</h1>
-        <p>Mathematical modeling and simulation tools developed in MATLAB to solve complex mechanical engineering problems.</p>
+        <p>Numerical tools and simulation scripts developed primarily in MATLAB for mechanical systems analysis.</p>
         
         <div class="file-grid">
             <div class="file-card">
@@ -38,23 +37,13 @@
                 <p>Numerical simulation of multi-degree-of-freedom systems, including vibration analysis and frequency response mapping.</p>
                 <a href="#" class="btn-download">View Repository</a>
             </div>
-
             <div class="file-card">
                 <h3>Finite Element Analysis Script</h3>
-                <p>A custom-built MATLAB tool for calculating nodal displacements and element stresses in 2D truss and frame structures.</p>
+                <p>A custom-built MATLAB tool for calculating nodal displacements and element stresses in 2D truss structures.</p>
                 <a href="#" class="btn-download">Download Script</a>
-            </div>
-
-            <div class="file-card">
-                <h3>Numerical Methods Toolkit</h3>
-                <p>Collection of scripts for root-finding, numerical integration, and solving ordinary differential equations (ODEs).</p>
-                <a href="#" class="btn-download">View Folder</a>
             </div>
         </div>
     </div>
-
-    <footer>
-        <p>&copy; 2026 Skyler Fellenz</p>
-    </footer>
+    <footer><p>&copy; 2026 Skyler Fellenz</p></footer>
 </body>
 </html>
