--- a/iam3d.html
+++ b/iam3d.html
@@ -11,6 +11,9 @@
         <div class="brand-name"><a href="index.html">SKYLER FELLENZ</a></div>
         <nav>
             <ul class="nav-links">
+                <li><a href="index.html#about">About</a></li>
+                <li><a href="index.html#resume">Resume</a></li>
+                <li><a href="index.html#contact">Contact</a></li>
                 <li class="dropdown">
                     <a href="#">Projects ▼</a>
                     <ul class="dropdown-menu">
@@ -20,9 +23,6 @@
                         <li><a href="iam3d.html">IAM3D</a></li>
                     </ul>
                 </li>
-                <li><a href="index.html#about">About</a></li>
-                <li><a href="index.html#resume">Resume</a></li>
-                <li><a href="index.html#contact">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -34,12 +34,12 @@
         <div class="file-grid">
             <div class="file-card">
                 <h3>Optimized Lattice Structure</h3>
-                <p>Lightweight infill design optimized for high-strength additive manufacturing.</p>
+                <p>Lightweight infill design optimized for high-strength additive manufacturing and material efficiency.</p>
                 <a href="#" class="btn-download">Download STL</a>
             </div>
             <div class="file-card">
-                <h3>Structural Analysis</h3>
-                <p>Mechanical property variance based on print layer orientation and material density.</p>
+                <h3>Structural Analysis Study</h3>
+                <p>Mechanical property variance based on print layer orientation and material density parameters.</p>
                 <a href="#" class="btn-download">View Analysis</a>
             </div>
         </div>
