--- a/eml2023.html
+++ b/eml2023.html
@@ -11,6 +11,9 @@
         <div class="brand-name"><a href="index.html">SKYLER FELLENZ</a></div>
         <nav>
             <ul class="nav-links">
+                <li><a href="index.html#about">About</a></li>
+                <li><a href="index.html#resume">Resume</a></li>
+                <li><a href="index.html#contact">Contact</a></li>
                 <li class="dropdown">
                     <a href="#">Projects ▼</a>
                     <ul class="dropdown-menu">
@@ -20,9 +23,6 @@
                         <li><a href="iam3d.html">IAM3D</a></li>
                     </ul>
                 </li>
-                <li><a href="index.html#about">About</a></li>
-                <li><a href="index.html#resume">Resume</a></li>
-                <li><a href="index.html#contact">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -39,7 +39,7 @@
             </div>
             <div class="file-card">
                 <h3>Technical Engineering Drawings</h3>
-                <p>Dimensioned PDF drawings including GD&T and manufacturing tolerances.</p>
+                <p>Dimensioned PDF drawings including GD&T and manufacturing specifications.</p>
                 <a href="#" class="btn-download">View PDF</a>
             </div>
         </div>
