--- a/grip.html
+++ b/grip.html
@@ -11,6 +11,9 @@
         <div class="brand-name"><a href="index.html">SKYLER FELLENZ</a></div>
         <nav>
             <ul class="nav-links">
+                <li><a href="index.html#about">About</a></li>
+                <li><a href="index.html#resume">Resume</a></li>
+                <li><a href="index.html#contact">Contact</a></li>
                 <li class="dropdown">
                     <a href="#">Projects ▼</a>
                     <ul class="dropdown-menu">
@@ -20,9 +23,6 @@
                         <li><a href="iam3d.html">IAM3D</a></li>
                     </ul>
                 </li>
-                <li><a href="index.html#about">About</a></li>
-                <li><a href="index.html#resume">Resume</a></li>
-                <li><a href="index.html#contact">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -34,12 +34,12 @@
         <div class="file-grid">
             <div class="file-card">
                 <h3>Adaptive Hand Assembly</h3>
-                <p>Fully constrained 3D model of an assistive prosthetic hand mechanism.</p>
+                <p>Fully constrained 3D model of an assistive prosthetic hand mechanism designed for 3D printing.</p>
                 <a href="#" class="btn-download">Download STEP</a>
             </div>
             <div class="file-card">
-                <h3>Testing Documentation</h3>
-                <p>Analysis of mechanical performance and user ergonomic feedback.</p>
+                <h3>Prosthetic Design Documentation</h3>
+                <p>Technical report covering material selection, ergonomic analysis, and testing results.</p>
                 <a href="#" class="btn-download">View Report</a>
             </div>
         </div>
