--- a/eml2023.html
+++ b/eml2023.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EML2023 | Skyler Fellenz</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700;800&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -34,16 +35,26 @@
         <div class="file-grid">
             <div class="file-card">
                 <h3>Main Mechanical Assembly</h3>
-                <p>Full system assembly featuring complex motion constraints and interference analysis.</p>
-                <a href="#" class="btn-download">Download STEP</a>
+                <p>Full system assembly featuring complex motion constraints, interference analysis, and optimized component placement.</p>
+                <a href="cad_files/eml2023/assembly.step" class="btn-download" download>Download STEP File</a>
             </div>
+
             <div class="file-card">
                 <h3>Technical Engineering Drawings</h3>
-                <p>Dimensioned PDF drawings including GD&T and manufacturing specifications.</p>
-                <a href="#" class="btn-download">View PDF</a>
+                <p>Comprehensive dimensioned PDF drawings including GD&T (Geometric Dimensioning and Tolerancing) and Bill of Materials (BOM).</p>
+                <a href="cad_files/eml2023/drawings.pdf" class="btn-download" target="_blank">View PDF Drawing</a>
+            </div>
+
+            <div class="file-card">
+                <h3>CNC Machined Bracket</h3>
+                <p>Custom component designed for 3-axis CNC milling, featuring optimized toolpath clearance and mounting hole tolerances.</p>
+                <a href="cad_files/eml2023/bracket.step" class="btn-download" download>Download Part File</a>
             </div>
         </div>
     </div>
-    <footer><p>&copy; 2026 Skyler Fellenz</p></footer>
+
+    <footer>
+        <p>&copy; 2026 Skyler Fellenz</p>
+    </footer>
 </body>
 </html>
