--- a/eml2023.html
+++ b/eml2023.html
@@ -34,21 +34,21 @@
         
         <div class="file-grid">
             <div class="file-card">
-                <h3>Main Mechanical Assembly</h3>
-                <p>Full system assembly featuring complex motion constraints, interference analysis, and optimized component placement.</p>
+                <h3>Main Assembly</h3>
+                <p>Full system assembly built from scratch following the <strong>Less Boring Lectures</strong> methodology. Focuses on proper mating techniques, motion analysis, and hierarchical sub-assembly organization.</p>
                 <a href="cad_files/eml2023/assembly.step" class="btn-download" download>Download STEP File</a>
             </div>
 
             <div class="file-card">
-                <h3>Technical Engineering Drawings</h3>
-                <p>Comprehensive dimensioned PDF drawings including GD&T (Geometric Dimensioning and Tolerancing) and Bill of Materials (BOM).</p>
+                <h3>Technical Drawings</h3>
+                <p>Detailed engineering drawings providing comprehensive <strong>GD&T</strong> referencing. Includes tolerance stacks, datum identifiers, and feature control frames to ensure manufacturing precision.</p>
                 <a href="cad_files/eml2023/drawings.pdf" class="btn-download" target="_blank">View PDF Drawing</a>
             </div>
 
             <div class="file-card">
-                <h3>CNC Machined Bracket</h3>
-                <p>Custom component designed for 3-axis CNC milling, featuring optimized toolpath clearance and mounting hole tolerances.</p>
-                <a href="cad_files/eml2023/bracket.step" class="btn-download" download>Download Part File</a>
+                <h3>Component Parts</h3>
+                <p>Individual CAD parts designed with parametric modeling. These files showcase clean feature trees and design intent optimized for the final assembly.</p>
+                <a href="cad_files/eml2023/parts_package.zip" class="btn-download" download>Download Parts (.zip)</a>
             </div>
         </div>
     </div>
