--- a/index.html
+++ b/index.html
@@ -2,19 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Skyler Fellenz | Design Hub</title>
+    <title>Skyler Fellenz | Mechanical Engineering</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700;800&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
         <div class="brand-name"><a href="index.html">SKYLER FELLENZ</a></div>
         <nav>
             <ul class="nav-links">
-                <li><a href="index.html#about">About</a></li>
-                <li><a href="index.html#resume">Resume</a></li>
-                <li><a href="index.html#contact">Contact</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#resume">Resume</a></li>
+                <li><a href="#contact">Contact</a></li>
                 <li class="dropdown">
                     <a href="#">Projects ▼</a>
                     <ul class="dropdown-menu">
@@ -29,33 +27,26 @@
     </header>
 
     <section class="hero">
-        <div class="hero-container">
-            <h1>SKYLER FELLENZ</h1>
-            <h2>DESIGN HUB</h2>
-            <p>Mechanical Engineering • CAD • Engineering Analysis</p>
-        </div>
+        <h1>SKYLER FELLENZ</h1>
+        <p style="color: var(--sky-blue); letter-spacing: 4px;">MECHANICAL ENGINEERING STUDENT</p>
     </section>
 
     <section id="about" class="content-section">
-        <h2>About Me</h2>
-        <div class="about-text">
-            <p>Hi, I’m Skyler — a mechanical engineering student focused on design and problem-solving. I study Mechanical Engineering at the University of Florida, translating theory into practical solutions.</p>
-            <p>I enjoy tackling problems at the intersection of mechanics, design, and human impact, with an emphasis on clarity and efficiency.</p>
-        </div>
+        <h2>About</h2>
+        <p>Mechanical Engineering student at the University of Florida with a focus on CAD design, manufacturing, and engineering analysis.</p>
     </section>
 
     <section id="resume" class="content-section">
         <h2>Resume</h2>
-        <p>Technical Skills: SolidWorks, MATLAB, Mechanical Design, Additive Manufacturing.</p>
-        <a href="resume.pdf" class="btn-download" download>Download Full Resume</a>
+        <p>Technical Skills: SolidWorks, MATLAB, GD&T, Additive Manufacturing.</p>
+        <a href="resume.pdf" class="btn-download" download>Download PDF</a>
     </section>
 
     <section id="contact" class="content-section">
         <h2>Contact</h2>
-        <p>Reach out via email to discuss opportunities or projects:</p>
-        <a href="mailto:skyfellenzjobs@gmail.com" style="color:var(--sky-blue); font-weight:700; text-decoration:none; font-size:1.2rem;">skyfellenzjobs@gmail.com</a>
+        <a href="mailto:skyfellenzjobs@gmail.com" style="color: var(--sky-blue); text-decoration: none; font-weight: bold;">skyfellenzjobs@gmail.com</a>
     </section>
 
-    <footer><p>&copy; 2026 Skyler Fellenz</p></footer>
+    <footer>&copy; 2026 Skyler Fellenz</footer>
 </body>
 </html>
