--- a/eml2023.html
+++ b/eml2023.html
@@ -2,10 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EML2023 | Skyler Fellenz</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700;800&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -30,31 +28,31 @@
 
     <div class="container">
         <h1>EML 2023: Design & Manufacturing</h1>
-        <p>Mechanical design projects focused on CAD modeling, engineering drawings, and manufacturing processes.</p>
+        <p>Mechanical design and manufacturing workflows.</p>
         
         <div class="file-grid">
             <div class="file-card">
-                <h3>Main Assembly</h3>
-                <p>Full system assembly built from scratch following the <strong>Less Boring Lectures</strong> methodology. Focuses on proper mating techniques, motion analysis, and hierarchical sub-assembly organization.</p>
-                <a href="cad_files/eml2023/assembly.step" class="btn-download" download>Download STEP File</a>
-            </div>
-
-            <div class="file-card">
-                <h3>Technical Drawings</h3>
-                <p>Detailed engineering drawings providing comprehensive <strong>GD&T</strong> referencing. Includes tolerance stacks, datum identifiers, and feature control frames to ensure manufacturing precision.</p>
-                <a href="cad_files/eml2023/drawings.pdf" class="btn-download" target="_blank">View PDF Drawing</a>
-            </div>
-
-            <div class="file-card">
                 <h3>Component Parts</h3>
-                <p>Individual CAD parts designed with parametric modeling. These files showcase clean feature trees and design intent optimized for the final assembly.</p>
+                <p>Individual CAD parts designed with parametric modeling. These files showcase clean feature trees and design intent.</p>
                 <a href="cad_files/eml2023/parts_package.zip" class="btn-download" download>Download Parts (.zip)</a>
+            </div>
+
+            <h2 style="color: var(--text-dim); margin-top: 40px;">Coming Soon</h2>
+            <hr style="border: 0; border-top: 1px solid rgba(56, 189, 248, 0.2);">
+
+            <div class="file-card" style="opacity: 0.6;">
+                <h3>Assemblies</h3>
+                <p>Assemblies built from scratch following the <strong>Less Boring Lectures</strong> methodology, featuring proper constraints and motion analysis.</p>
+                <a href="#" class="btn-download btn-disabled">Coming Soon</a>
+            </div>
+
+            <div class="file-card" style="opacity: 0.6;">
+                <h3>Engineering Drawings</h3>
+                <p>Detailed drawings providing comprehensive <strong>GD&T</strong> referencing for manufacturing precision.</p>
+                <a href="#" class="btn-download btn-disabled">Coming Soon</a>
             </div>
         </div>
     </div>
-
-    <footer>
-        <p>&copy; 2026 Skyler Fellenz</p>
-    </footer>
+    <footer>&copy; 2026 Skyler Fellenz</footer>
 </body>
 </html>
