--- a/coding.html
+++ b/coding.html
@@ -2,7 +2,6 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coding | Skyler Fellenz</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -29,21 +28,16 @@
 
     <div class="container">
         <h1>Engineering Analysis & Coding</h1>
-        <p>Numerical tools and simulation scripts developed primarily in MATLAB for mechanical systems analysis.</p>
+        <p>Mathematical modeling and simulation tools developed in MATLAB to solve mechanical engineering problems.</p>
         
         <div class="file-grid">
-            <div class="file-card">
-                <h3>MATLAB Dynamics Simulation</h3>
-                <p>Numerical simulation of multi-degree-of-freedom systems, including vibration analysis and frequency response mapping.</p>
-                <a href="#" class="btn-download">View Repository</a>
-            </div>
-            <div class="file-card">
-                <h3>Finite Element Analysis Script</h3>
-                <p>A custom-built MATLAB tool for calculating nodal displacements and element stresses in 2D truss structures.</p>
-                <a href="#" class="btn-download">Download Script</a>
+            <div class="file-card" style="text-align: center; padding: 60px 20px;">
+                <h2 style="color: var(--sky-blue); margin-bottom: 20px;">Coming Soon</h2>
+                <p>I am currently compiling a repository of MATLAB scripts, including <strong>Vibration Analysis</strong> tools and <strong>FEA solvers</strong> for 2D truss structures.</p>
+                <a href="index.html#contact" class="btn-download">Contact for Repository Access</a>
             </div>
         </div>
     </div>
-    <footer><p>&copy; 2026 Skyler Fellenz</p></footer>
+    <footer>&copy; 2026 Skyler Fellenz</footer>
 </body>
 </html>
