--- a/grip.html
+++ b/grip.html
@@ -2,7 +2,6 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GRiP | Skyler Fellenz</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -28,22 +27,17 @@
     </header>
 
     <div class="container">
-        <h1>GRiP Projects</h1>
-        <p>Generational Relief in Prosthetics: Engineering assistive devices for real-world impact.</p>
+        <h1>GRiP: Generational Relief in Prosthetics</h1>
+        <p>Engineering assistive devices and adaptive equipment for the local community.</p>
         
         <div class="file-grid">
-            <div class="file-card">
-                <h3>Adaptive Hand Assembly</h3>
-                <p>Fully constrained 3D model of an assistive prosthetic hand mechanism designed for 3D printing.</p>
-                <a href="#" class="btn-download">Download STEP</a>
-            </div>
-            <div class="file-card">
-                <h3>Prosthetic Design Documentation</h3>
-                <p>Technical report covering material selection, ergonomic analysis, and testing results.</p>
-                <a href="#" class="btn-download">View Report</a>
+            <div class="file-card" style="text-align: center; padding: 60px 20px;">
+                <h2 style="color: var(--sky-blue); margin-bottom: 20px;">Coming Soon</h2>
+                <p>Documentation for the <strong>Adaptive Hand Assembly</strong> and prosthetic testing results are currently being processed for public viewing.</p>
+                <a href="index.html#contact" class="btn-download">Inquire About Projects</a>
             </div>
         </div>
     </div>
-    <footer><p>&copy; 2026 Skyler Fellenz</p></footer>
+    <footer>&copy; 2026 Skyler Fellenz</footer>
 </body>
 </html>
