--- a/iam3d.html
+++ b/iam3d.html
@@ -2,7 +2,6 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>IAM3D | Skyler Fellenz</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -29,21 +28,16 @@
 
     <div class="container">
         <h1>IAM3D: Additive Manufacturing</h1>
-        <p>Research and development focused on 3D printing optimization and complex geometries.</p>
+        <p>Exploring the boundaries of 3D printing, material optimization, and generative design.</p>
         
         <div class="file-grid">
-            <div class="file-card">
-                <h3>Optimized Lattice Structure</h3>
-                <p>Lightweight infill design optimized for high-strength additive manufacturing and material efficiency.</p>
-                <a href="#" class="btn-download">Download STL</a>
-            </div>
-            <div class="file-card">
-                <h3>Structural Analysis Study</h3>
-                <p>Mechanical property variance based on print layer orientation and material density parameters.</p>
-                <a href="#" class="btn-download">View Analysis</a>
+            <div class="file-card" style="text-align: center; padding: 60px 20px;">
+                <h2 style="color: var(--sky-blue); margin-bottom: 20px;">Coming Soon</h2>
+                <p>Detailed analysis of <strong>Lattice Structures</strong> and additive manufacturing optimization scripts are being finalized for download.</p>
+                <a href="index.html#contact" class="btn-download">Contact for Specifications</a>
             </div>
         </div>
     </div>
-    <footer><p>&copy; 2026 Skyler Fellenz</p></footer>
+    <footer>&copy; 2026 Skyler Fellenz</footer>
 </body>
 </html>
