--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Skyler Fellenz | Mechanical Engineering</title>
+    <title>Skyler Fellenz | Design Hub</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -16,10 +16,10 @@
                 <li class="dropdown">
                     <a href="#">Projects ▼</a>
                     <ul class="dropdown-menu">
-                        <li><a href="coding.html">Coding</a></li>
+                        <li><a href="coding.html">Coding <span class="status-label">(Coming Soon)</span></a></li>
                         <li><a href="eml2023.html">EML2023</a></li>
-                        <li><a href="grip.html">GRiP</a></li>
-                        <li><a href="iam3d.html">IAM3D</a></li>
+                        <li><a href="grip.html">GRiP <span class="status-label">(Coming Soon)</span></a></li>
+                        <li><a href="iam3d.html">IAM3D <span class="status-label">(Coming Soon)</span></a></li>
                     </ul>
                 </li>
             </ul>
@@ -27,26 +27,12 @@
     </header>
 
     <section class="hero">
-        <h1>SKYLER FELLENZ</h1>
-        <p style="color: var(--sky-blue); letter-spacing: 4px;">MECHANICAL ENGINEERING STUDENT</p>
+        <div class="hero-content">
+            <h1 class="main-title">SKYLER FELLENZ</h1>
+            <h2 class="sub-title">DESIGN HUB</h2>
+            <p class="tagline">Mechanical Engineering • CAD • Engineering Analysis</p>
+        </div>
     </section>
 
-    <section id="about" class="content-section">
-        <h2>About</h2>
-        <p>Mechanical Engineering student at the University of Florida with a focus on CAD design, manufacturing, and engineering analysis.</p>
-    </section>
-
-    <section id="resume" class="content-section">
-        <h2>Resume</h2>
-        <p>Technical Skills: SolidWorks, MATLAB, GD&T, Additive Manufacturing.</p>
-        <a href="resume.pdf" class="btn-download" download>Download PDF</a>
-    </section>
-
-    <section id="contact" class="content-section">
-        <h2>Contact</h2>
-        <a href="mailto:skyfellenzjobs@gmail.com" style="color: var(--sky-blue); text-decoration: none; font-weight: bold;">skyfellenzjobs@gmail.com</a>
-    </section>
-
-    <footer>&copy; 2026 Skyler Fellenz</footer>
-</body>
+    </body>
 </html>
