--- a/eml2023.html
+++ b/eml2023.html
@@ -16,10 +16,10 @@
                 <li class="dropdown">
                     <a href="#">Projects ▼</a>
                     <ul class="dropdown-menu">
-                        <li><a href="coding.html">Coding</a></li>
+                        <li><a href="coding.html">Coding <span class="status-label">(Coming Soon)</span></a></li>
                         <li><a href="eml2023.html">EML2023</a></li>
-                        <li><a href="grip.html">GRiP</a></li>
-                        <li><a href="iam3d.html">IAM3D</a></li>
+                        <li><a href="grip.html">GRiP <span class="status-label">(Coming Soon)</span></a></li>
+                        <li><a href="iam3d.html">IAM3D <span class="status-label">(Coming Soon)</span></a></li>
                     </ul>
                 </li>
             </ul>
@@ -28,31 +28,27 @@
 
     <div class="container">
         <h1>EML 2023: Design & Manufacturing</h1>
-        <p>Mechanical design and manufacturing workflows.</p>
-        
         <div class="file-grid">
             <div class="file-card">
                 <h3>Component Parts</h3>
-                <p>Individual CAD parts designed with parametric modeling. These files showcase clean feature trees and design intent.</p>
-                <a href="cad_files/eml2023/parts_package.zip" class="btn-download" download>Download Parts (.zip)</a>
+                <p>Individual CAD parts designed with parametric modeling.</p>
+                <a href="cad_files/parts_package.zip" class="btn-download" download>Download Parts (.zip)</a>
             </div>
 
-            <h2 style="color: var(--text-dim); margin-top: 40px;">Coming Soon</h2>
-            <hr style="border: 0; border-top: 1px solid rgba(56, 189, 248, 0.2);">
+            <h2 style="color: var(--text-dim); margin-top: 30px;">Coming Soon</h2>
 
             <div class="file-card" style="opacity: 0.6;">
                 <h3>Assemblies</h3>
-                <p>Assemblies built from scratch following the <strong>Less Boring Lectures</strong> methodology, featuring proper constraints and motion analysis.</p>
+                <p>Assemblies built from scratch following the Less Boring Lectures methodology.</p>
                 <a href="#" class="btn-download btn-disabled">Coming Soon</a>
             </div>
 
             <div class="file-card" style="opacity: 0.6;">
                 <h3>Engineering Drawings</h3>
-                <p>Detailed drawings providing comprehensive <strong>GD&T</strong> referencing for manufacturing precision.</p>
+                <p>Detailed drawings providing comprehensive GD&T referencing.</p>
                 <a href="#" class="btn-download btn-disabled">Coming Soon</a>
             </div>
         </div>
     </div>
-    <footer>&copy; 2026 Skyler Fellenz</footer>
 </body>
 </html>
