--- a/coding.html
+++ b/coding.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Coding | Skyler Fellenz</title>
+    <title>Portfolio | Skyler Fellenz</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -11,15 +11,15 @@
         <nav>
             <ul class="nav-links">
                 <li><a href="index.html#about">About</a></li>
-                <li><a href="index.html#resume">Resume</a></li>
-                <li><a href="index.html#contact">Contact</a></li>
+                <li><a href="#resume">Resume</a></li>
+                <li><a href="#contact">Contact</a></li>
                 <li class="dropdown">
                     <a href="#">Projects ▼</a>
                     <ul class="dropdown-menu">
-                        <li><a href="coding.html">Coding</a></li>
+                        <li><a href="coding.html">Coding <span class="status-label">(Coming Soon)</span></a></li>
                         <li><a href="eml2023.html">EML2023</a></li>
-                        <li><a href="grip.html">GRiP</a></li>
-                        <li><a href="iam3d.html">IAM3D</a></li>
+                        <li><a href="grip.html">GRiP <span class="status-label">(Coming Soon)</span></a></li>
+                        <li><a href="iam3d.html">IAM3D <span class="status-label">(Coming Soon)</span></a></li>
                     </ul>
                 </li>
             </ul>
@@ -28,13 +28,11 @@
 
     <div class="container">
         <h1>Engineering Analysis & Coding</h1>
-        <p>Mathematical modeling and simulation tools developed in MATLAB to solve mechanical engineering problems.</p>
-        
         <div class="file-grid">
-            <div class="file-card" style="text-align: center; padding: 60px 20px;">
+            <div class="file-card" style="opacity: 0.6; text-align: center; padding: 60px;">
                 <h2 style="color: var(--sky-blue); margin-bottom: 20px;">Coming Soon</h2>
-                <p>I am currently compiling a repository of MATLAB scripts, including <strong>Vibration Analysis</strong> tools and <strong>FEA solvers</strong> for 2D truss structures.</p>
-                <a href="index.html#contact" class="btn-download">Contact for Repository Access</a>
+                <p>Technical files and documentation for this section are currently being prepared for upload.</p>
+                <a href="index.html#contact" class="btn-download">Contact for Details</a>
             </div>
         </div>
     </div>
