--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Skyler Fellenz | Design Hub</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700;900&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -34,5 +36,35 @@
         </div>
     </section>
 
-    </body>
+    <section id="about" class="container">
+        <h2 class="section-title">About Me</h2>
+        <div class="file-card">
+            <p>I am Skyler Fellenz, a Mechanical Engineering student at the University of Florida with hands-on experience in mechanical design, CAD modeling, and engineering documentation. My work centers on translating functional requirements into manufacturable components, supported by clear drawings, tolerancing, and system-level thinking.</p>
+            <hr class="content-divider">
+            <p>I have experience in collaborative engineering environments through design teams focused on assistive devices and advanced manufacturing systems. In these roles, I contribute mechanical designs in SOLIDWORKS, develop build-to-print drawings using GD&T, and coordinate across mechanical, electrical, and software teams to ensure interface alignment and manufacturability. I am certified as a SOLIDWORKS Associate and have completed extensive part and assembly modeling work intended for controlled release and repeatable production.</p>
+            <hr class="content-divider">
+            <p>I am currently studying abroad at the Technical University of Denmark, where I am gaining exposure to international engineering standards and workflows. This experience has strengthened my ability to adapt to new systems, communicate across cultures, and approach engineering problems with a broader perspective.</p>
+            <hr class="content-divider">
+            <p>Alongside technical work, I bring reliability and operational awareness from roles supporting large-scale events, as well as leadership experience through professional and service organizations. I am seeking opportunities in mechanical design, manufacturing, testing, and maintenance engineering where structured problem-solving and clear documentation matter.</p>
+        </div>
+    </section>
+
+    <section id="resume" class="container">
+        <h2 class="section-title">Resume</h2>
+        <div class="file-card">
+            <p>View my technical experience, completed coursework, and certifications.</p>
+            <a href="resume.pdf" class="btn-download" download>Download PDF Resume</a>
+        </div>
+    </section>
+
+    <section id="contact" class="container" style="margin-bottom: 100px;">
+        <h2 class="section-title">Contact</h2>
+        <div class="file-card" style="text-align: center;">
+            <p>Reach out through the links below for project collaborations or internship opportunities.</p>
+            <a href="mailto:skyfellenzjobs@gmail.com" class="btn-download">skyfellenzjobs@gmail.com</a>
+        </div>
+    </section>
+
+    <footer>&copy; 2026 Skyler Fellenz</footer>
+</body>
 </html>
