--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             
             <p>I am currently studying abroad at the Technical University of Denmark, where I am gaining exposure to international engineering standards and workflows. This experience has strengthened my ability to adapt to new systems, communicate across cultures, and approach engineering problems with a broader perspective.</p>
             
-            <p>Alongside technical work, I bring reliability and operational awareness from roles supporting large scale events, as well as leadership experience through professional and service organizations. I am seeking opportunities in mechanical design, manufacturing, testing, and maintenance engineering where structured problem solving and clear documentation matter.</p>
+            <p>Alongside technical work, I bring reliability and operational awareness from roles supporting large scale events, as well as leadership experience through professional and service organizations. I am seeking opportunities in mechanical design, data analysis, biomechanics, manufacturing, testing, and maintenance engineering where structured problem solving and clear documentation matter.</p>
         </div>
     </section>
 
