--- a/eml2023.html
+++ b/eml2023.html
@@ -8,45 +8,29 @@
 <body>
     <header>
         <div class="brand-name"><a href="index.html">SKYLER FELLENZ</a></div>
-        <nav>
-            <ul class="nav-links">
-                <li><a href="index.html#about">About</a></li>
-                <li><a href="index.html#resume">Resume</a></li>
-                <li><a href="index.html#contact">Contact</a></li>
-                <li class="dropdown">
-                    <a href="#">Projects ▼</a>
-                    <ul class="dropdown-menu">
-                        <li><a href="coding.html">Coding <span class="status-label">(Coming Soon)</span></a></li>
-                        <li><a href="eml2023.html">EML2023</a></li>
-                        <li><a href="grip.html">GRiP <span class="status-label">(Coming Soon)</span></a></li>
-                        <li><a href="iam3d.html">IAM3D <span class="status-label">(Coming Soon)</span></a></li>
-                    </ul>
-                </li>
-            </ul>
-        </nav>
+        <nav><ul class="nav-links">
+            <li><a href="index.html#about">About</a></li>
+            <li><a href="index.html#resume">Resume</a></li>
+            <li><a href="index.html#contact">Contact</a></li>
+            <li class="dropdown">
+                <a href="#">Projects ▼</a>
+                <ul class="dropdown-menu">
+                    <li><a href="coding.html">Coding</a></li>
+                    <li><a href="eml2023.html">EML2023</a></li>
+                    <li><a href="grip.html">GRiP</a></li>
+                    <li><a href="iam3d.html">IAM3D</a></li>
+                </ul>
+            </li>
+        </ul></nav>
     </header>
 
     <div class="container">
-        <h1>EML 2023: Design & Manufacturing</h1>
-        <div class="file-grid">
+        <h2 class="section-title">EML 2023: Design & Manufacturing</h2>
+        <div class="file-grid" style="display: flex; flex-direction: column; gap: 15px;">
             <div class="file-card">
                 <h3>Component Parts</h3>
                 <p>Individual CAD parts designed with parametric modeling.</p>
                 <a href="cad_files/parts_package.zip" class="btn-download" download>Download Parts (.zip)</a>
-            </div>
-
-            <h2 style="color: var(--text-dim); margin-top: 30px;">Coming Soon</h2>
-
-            <div class="file-card" style="opacity: 0.6;">
-                <h3>Assemblies</h3>
-                <p>Assemblies built from scratch following the Less Boring Lectures methodology.</p>
-                <a href="#" class="btn-download btn-disabled">Coming Soon</a>
-            </div>
-
-            <div class="file-card" style="opacity: 0.6;">
-                <h3>Engineering Drawings</h3>
-                <p>Detailed drawings providing comprehensive GD&T referencing.</p>
-                <a href="#" class="btn-download btn-disabled">Coming Soon</a>
             </div>
         </div>
     </div>
